backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8881
      targetPort: 8881
  type: ClusterIP
