pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: backend
        image: green_api_myapp-backend:latest
        ports:
          - containerPort: 8881
      - name: frontend
        image: green_api_myapp-frontend:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
spec:
  selector:
    app: my-app
  ports:
    - name: http-backend
      protocol: TCP
      port: 8881
      targetPort: 8881
    - name: http-frontend
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Открывает порты на узле для внешнего доступа
